--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,7 @@
             <artifactId>jcalendar</artifactId>
             <version>1.4</version>
         </dependency>
+        
     </dependencies>
 
     <build>
@@ -155,6 +156,14 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-resources-plugin</artifactId>
                     <version>3.0.2</version>
+                        <configuration>
+                      <verbose>true</verbose>
+                      <fork>true</fork>
+                      <executable>${java.home}</executable>
+                   <compilerVersion>1.8</compilerVersion>
+                   <source>1.8</source>
+                   <target>1.8</target>
+                 </configuration>
                 </plugin>
         
                 <plugin>
@@ -253,7 +262,7 @@
                         </descriptorRefs>
                     </configuration>
                 </plugin>
-                        
+                                             
             </plugins>
         </pluginManagement>
     </build>
