--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,18 @@
             <version>3.4.1</version>
         </dependency>
         
+        <dependency>
+            <groupId>com.google.zxing</groupId>
+            <artifactId>core</artifactId>
+            <version>3.4.1</version> <!-- or the latest version available -->
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.zxing</groupId>
+            <artifactId>javase</artifactId>
+            <version>3.4.1</version> <!-- or the latest version available -->
+        </dependency>
+
 
         <dependency>
             <groupId>com.formdev</groupId>
@@ -194,6 +206,9 @@
                         </locations>
                     </configuration>
                 </plugin>
+
+                
+
                 <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
                 <plugin>
                     <artifactId>maven-clean-plugin</artifactId>
@@ -293,9 +308,7 @@
                             <descriptorRef>jar-with-dependencies</descriptorRef>
                         </descriptorRefs>
                     </configuration>
-                </plugin>
-                
-                        
+                </plugin>                        
             </plugins>
         </pluginManagement>
     </build>
